Changed logo, added fan content policy

--- a/MagicCardTracker.Pwa/Shared/NavMenu.razor
+++ b/MagicCardTracker.Pwa/Shared/NavMenu.razor
@@ -4,7 +4,7 @@
 
     <div class="container-fluid">
         <div clas="navbar-brand">
-            <img class="img-fluid" src="Logo_temp.png" style="height:40px" />
+            <img class="img-fluid" src="logo-mtg.png" style="height:40px" />
         </div>
         <button class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
