--- a/MagicCardTracker.Pwa/Shared/Footer.razor
+++ b/MagicCardTracker.Pwa/Shared/Footer.razor
@@ -1,10 +1,10 @@
 <div class="row">
     <div class="col-12 col-md-8 offset-md-2">
         <div class="text-center color-white-60 small content">
-            Magic Card Tracker is unofficial Fan Content permitted under the Fan Content Policy. 
+            Magic Card Tracker is unofficial Fan Content permitted under the <a href="https://company.wizards.com/en/legal/fancontentpolicy">Fan Content Policy</a>. 
             Not approved/endorsed by Wizards. 
             Portions of the materials used are property of Wizards of the Coast. 
-            © Wizards of the Coast LLC.
+            ©Wizards of the Coast LLC.
         </div>
     </div>
 </div>
