--- a/MagicCardTracker.Pwa/Shared/MainLayout.razor
+++ b/MagicCardTracker.Pwa/Shared/MainLayout.razor
@@ -3,8 +3,10 @@
 <div class="vh-100 d-flex flex-column">
     <NavMenu />
 
-    <div class="mt-2 flex-grow-1 container d-flex flex-column">
-        @Body
+    <div id="scrollContext" class="d-flex flex-column flex-grow-1 overflow-auto">
+        <div class="mt-2 flex-grow-1 container d-flex flex-column">
+            @Body
+        </div>
+        <Footer />
     </div>
-    <Footer></Footer>
 </div>
