--- a/MagicCardTracker.Pwa/Shared/NavMenu.razor
+++ b/MagicCardTracker.Pwa/Shared/NavMenu.razor
@@ -19,7 +19,7 @@
             </div>
             <ul class="navbar-nav mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <NavLink class="nav-link" Match="NavLinkMatch.All" href="/collection">
+                    <NavLink class="nav-link" href="/collection">
                         <i class="bi bi-book"></i> Collection
                     </NavLink>
                 </li>
@@ -28,11 +28,11 @@
                         <i class="bi bi-collection"></i> Sets
                     </NavLink>
                 </li>
-                <li class="nav-item">
+                @* <li class="nav-item">
                     <NavLink class="nav-link" href="/decks">
                         <i class="bi bi-box-seam"></i> Decks
                     </NavLink>
-                </li>
+                </li> *@
                 <li class="nav-item">
                     <NavLink class="nav-link" href="/profile">
                         <i class="bi bi-pie-chart-fill"></i> Profile
