--- a/MagicCardTracker.Pwa/Pages/Sets.razor
+++ b/MagicCardTracker.Pwa/Pages/Sets.razor
@@ -12,6 +12,11 @@
 <div class="row">
     <div class="col-12 lead d-flex justify-content-between">
         <span>Sets</span>
+        @if (_hasCards)
+        {
+            <span @onclick="@ToggleShowAll"> @(_showAll ? "Show collected" : "Show all") </span>
+        }        
+        
     </div>
 </div>
 
@@ -19,7 +24,7 @@
 
 @if (!_isLoading && _collectedSets != null)
 {
-    @foreach (var set in _collectedSets)
+    @foreach (var set in _showAll ? _collectedSets : _collectedSets.Where(s => s.NumberOfCollectedCards > 0))
     {
         <div class="row mt-2 cursor-pointer" @onclick="@(() => BrowseSet(set))">
             <div class="col-12 d-flex bg-elevated content">
@@ -40,6 +45,10 @@
 {
     private bool _isLoading;
 
+    private bool _showAll;
+
+    private bool _hasCards;
+
     private CancellationTokenSource _cts = new CancellationTokenSource();
 
     private IEnumerable<Set> _collectedSets;
@@ -55,11 +64,27 @@
     {
         _isLoading = true;
         _collectedSets = await _mediator.Send(new GetCollectedSets(), _cts.Token);
+
+        _hasCards = _collectedSets.Any(s => s.NumberOfCollectedCards > 0);
+        _showAll = !_hasCards;
+
         _isLoading = false;
+    }
+
+    private void ToggleShowAll()
+    {
+        _showAll = !_showAll;
     }
 
     private void BrowseSet(Set set)
     {
-        _navigationManager.NavigateTo($"/search/set:{set.Code}");
+        if (_showAll)
+        {
+            _navigationManager.NavigateTo($"/search/set:{set.Code}");
+        }
+        else
+        {
+            _navigationManager.NavigateTo($"/collection/{set.Code}");
+        }
     }
 }
