--- a/MagicCardTracker.Pwa/Components/CardOverlay.razor
+++ b/MagicCardTracker.Pwa/Components/CardOverlay.razor
@@ -13,7 +13,7 @@
         <div class="row flex-grow-1 align-items-center">
             <div class="col-md-6 d-flex justify-content-center">
                 <div class="content">
-                    <img class="magic-card" src="@_cardImageUrl" />
+                    <img class="magic-card" @onclick="@Close" src="@_cardImageUrl" />
                 </div>
             </div>
             <div class="col-md-6">
@@ -47,26 +47,18 @@
                         </tbody>
                     </table>
                 </div>
-                <label class="mt-2">In collection</label>
-                <div class="d-flex flex-column">
-                    <span class="color-white-60">Standard</span>
-                    <div class="d-flex justify-content-around align-items-center">
-                        <div @onclick="@(() => AddStandardCards(-1))"><span class="oi oi-minus color-primary"
-                                aria-hidden="true"></span></div>
-                        <span>@_card.Count</span>
-                        <div @onclick="@(() => AddStandardCards(1))"><span class="oi oi-plus color-primary"
-                                aria-hidden="true"></span></div>
+                <label class="mt-2">Collected</label>
+                <div class="mt-2 d-flex flex-column">
+                    <div class="mb-3">
+                        <label for="standardCount" class="color-white-60">Standard</label>
+                        <input id="standardCount" class="form-control" type="number" min=0 @bind="@_card.Count"></input>
                     </div>
-                    <span class="color-white-60">Foil</span>
-                    <div class="d-flex justify-content-around align-items-center">
-                        <div @onclick="@(() => AddFoilCards(-1))"><span class="oi oi-minus color-primary"
-                                aria-hidden="true"></span></div>
-                        <span>@_card.FoilCount</span>
-                        <div @onclick="@(() => AddFoilCards(1))"><span class="oi oi-plus color-primary"
-                                aria-hidden="true"></span></div>
+                    <div class="mb-3">
+                        <label for="foilCount" class="color-white-60">Foil</label>
+                        <input id="foilCount" class="form-control" type="number" min=0 @bind="@_card.FoilCount"></input>
                     </div>
                 </div>
-                <div class="mt-2 d-flex justify-content-end">
+                <div class="d-flex justify-content-end">
                     <button class="btn btn-primary me-2" @onclick="@UpdateCollection"> Save </button>
                     <button class="btn btn-outline-primary" @onclick="@Close">Close </button>
                 </div>
@@ -82,6 +74,7 @@
 @code
 {
     private string _cardImageUrl { get; set; }
+
     private CollectedCard _card { get; set; }
 
     private bool _isVisible;
@@ -114,21 +107,5 @@
         var command = new AddCard(_card);
         await Mediator.Send(command, CancellationToken.None);
         Close();
-    }
-
-    private void AddStandardCards(int amount)
-    {
-        var total = _card.Count + amount;
-        _card.Count = total >= 0
-        ? total
-        : 0;
-    }
-
-    private void AddFoilCards(int amount)
-    {
-        var total = _card.FoilCount + amount;
-        _card.FoilCount = total >= 0
-        ? total
-        : 0;
     }
 }
