--- a/MagicCardTracker.Pwa/wwwroot/css/style.css
+++ b/MagicCardTracker.Pwa/wwwroot/css/style.css
@@ -30,9 +30,13 @@ html, body {
     color: rgba(255,255,255,0.6)
 }
 
-a, .btn-link, a:hover {
+a, .btn-link, a:hover, .action-link {
     color: #F44336;
     text-decoration: none;
+}
+
+.action-link {
+    cursor: pointer;
 }
 
 .color-primary {
