Added exception handling for searches

--- a/MagicCardTracker.Pwa/Pages/Collection.razor
+++ b/MagicCardTracker.Pwa/Pages/Collection.razor
@@ -22,7 +22,7 @@
 {
     <CardDisplay Cards="@_loadedCards">
         <div class="color-white-60 text-center flex-grow-1 d-flex justify-content-center align-items-center lead">
-            Hell, no... Looks like you don't have any cards in your collection. Start by adding some :)
+            Hell, no... Looks like you don't have any cards in your collection
         </div>
     </CardDisplay>
 
