Optimized spacing and text size for mobile devices

--- a/Sources/MagicCardTracker.Pwa/Pages/QuickCollect.razor
+++ b/Sources/MagicCardTracker.Pwa/Pages/QuickCollect.razor
@@ -11,7 +11,7 @@
 
 <div class="row">
     <div class="col-12 lead">
-        <a href="collection">&lt; Collected cards</a> | Quick Collect
+        <a href="collection">&lt; Collection</a> | Quick Collect
     </div>
 </div>
 
