--- a/Sources/MagicCardTracker.Pwa/Pages/Collection.razor
+++ b/Sources/MagicCardTracker.Pwa/Pages/Collection.razor
@@ -11,7 +11,7 @@
 
 <div class="row">
     <div class="col-12 lead d-flex justify-content-between">
-        <span>Collected cards</span>
+        <span>Collection</span>
         <a href="collection/quick-collect"> Quick Collect</a>
     </div>
 </div>
