--- a/Sources/MagicCardTracker.Pwa/Shared/NavMenu.razor
+++ b/Sources/MagicCardTracker.Pwa/Shared/NavMenu.razor
@@ -9,10 +9,10 @@
         <div clas="navbar-brand">
             <img class="img-fluid" src="MCT_Logo_Wide.png" style="height:40px" />
         </div>
-        <button class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler border-0 shadow-none" @onclick="ToggleNavMenu">
+            <i class="bi bi-list"></i>
         </button>
-        <div class="@_navbarClass navbar-collapse" @onclick="ToggleNavMenu">
+        <div class="@_navbarClass navbar-collapse">
             <div class="flex-grow-1 d-flex align-items-center mx-4">
                 <i class="bi bi-search"></i>
                 <form class="form flex-grow-1" @onsubmit="@NavigateToSearch">
@@ -20,25 +20,25 @@
                         placeholder="Search for Magic cards...">
                 </form>
             </div>
-            <ul class="navbar-nav mt-2 mt-lg-0">
+            <ul class="navbar-nav mt-2 mt-lg-0 ms-4 ms-lg-0">
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="/collection">
-                        <i class="bi bi-book"></i> Collection
+                    <NavLink class="nav-link" href="/collection" @onclick="CloseNavMenu">
+                        <i class="bi bi-book me-2 me-lg-1"></i> Collection
                     </NavLink>
                 </li>
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="/sets">
-                        <i class="bi bi-collection"></i> Sets
+                    <NavLink class="nav-link" href="/sets" @onclick="CloseNavMenu">
+                        <i class="bi bi-collection me-2 me-lg-1"></i> Sets
                     </NavLink>
                 </li>
                 @* <li class="nav-item">
-                    <NavLink class="nav-link" href="/decks">
-                        <i class="bi bi-box-seam"></i> Decks
+                    <NavLink class="nav-link" href="/decks" @onclick="CloseNavMenu">
+                        <i class="bi bi-box-seam me-2 me-lg-1"></i> Decks
                     </NavLink>
                 </li> *@
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="/profile">
-                        <i class="bi bi-pie-chart-fill"></i> Profile
+                    <NavLink class="nav-link" href="/profile" @onclick="CloseNavMenu">
+                        <i class="bi bi-pie-chart-fill me-2 me-lg-1"></i> Profile
                     </NavLink>
                 </li>
             </ul>
@@ -74,6 +74,7 @@
         {
             _navigationManager.NavigateTo($"/search/{_queryString}");
         }
+        CloseNavMenu();
     }
 
     private void ScrollToTop(object sender, LocationChangedEventArgs e)
@@ -89,6 +90,11 @@
             ? e.Location.Substring(searchIndex + 8)
             : null;
         StateHasChanged();
+    }
+
+    private void CloseNavMenu()
+    {
+        _collapseNavMenu = true;
     }
 
     private void ToggleNavMenu()
