--- a/Sources/MagicCardTracker.Pwa/Shared/MainLayout.razor
+++ b/Sources/MagicCardTracker.Pwa/Shared/MainLayout.razor
@@ -3,7 +3,7 @@
 <div class="vh-100 d-flex flex-column">
     <NavMenu />
 
-    <div id="scrollContext" class="d-flex flex-column flex-grow-1 overflow-auto">
+    <div id="scrollContext" class="d-flex flex-column flex-grow-1">
         <div class="mt-2 flex-grow-1 container d-flex flex-column">
             @Body
         </div>
