--- a/Sources/MagicCardTracker.Pwa/wwwroot/css/style.css
+++ b/Sources/MagicCardTracker.Pwa/wwwroot/css/style.css
@@ -7,6 +7,15 @@ html, body {
     /* elevation 25262c */
 }
 
+body {
+    overflow: hidden;
+}
+
+#scrollContext {
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 .bg-elevated {
 
     background-color: #25262c;
