Added privacy policy in case somebody accidentially find this page :)

--- a/Sources/MagicCardTracker.Pwa/Shared/Footer.razor
+++ b/Sources/MagicCardTracker.Pwa/Shared/Footer.razor
@@ -4,7 +4,15 @@
             Magic Card Tracker is unofficial Fan Content permitted under the <a href="https://company.wizards.com/en/legal/fancontentpolicy">Fan Content Policy</a>. 
             Not approved/endorsed by Wizards. 
             Portions of the materials used are property of Wizards of the Coast. 
-            ©Wizards of the Coast LLC.
+            ©Wizards of the Coast LLC; Source of Magic Card Tracker ©Stefan Wilkes.
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <div class="content pt-0 small d-flex justify-content-between">
+            <a href="https://github.com/Horizon0156/MagicCardTracker"><i class="bi bi-github me-1"></i> Open Source </a>
+            <a href="/privacy-policy">Privacy Policy</a>
         </div>
     </div>
 </div>
