Optimized loading of Sets, added additional information to loading indocator

--- a/Sources/MagicCardTracker.Pwa/Components/LoadingIndicator.razor
+++ b/Sources/MagicCardTracker.Pwa/Components/LoadingIndicator.razor
@@ -1,7 +1,12 @@
 @if (IsBusy) 
 {
-    <div class="loader">
+    <div class="loader @(FadeOutBackground ? "fade-out-background" : null)">
         <img src="Loader.svg">
+        
+        @if (!string.IsNullOrWhiteSpace(Text))
+        {
+            <label>@Text</label>
+        }
     </div>
 }
 
@@ -9,4 +14,10 @@
     
     [Parameter]
     public bool IsBusy { get; set; }
+
+    [Parameter]
+    public bool FadeOutBackground { get; set; }
+
+    [Parameter]
+    public string Text { get; set; }
 }
