--- a/Sources/MagicCardTracker.Pwa/Pages/Sets.razor
+++ b/Sources/MagicCardTracker.Pwa/Pages/Sets.razor
@@ -12,13 +12,11 @@
 <div class="row">
     <div class="col-12 lead d-flex justify-content-between">
         <span>Sets</span>
-        <div>
-        <span class="action-link" @onclick="@RefreshAsync"> Refresh </span>
+        
         @if (_hasCards)
         {
             <span class="ms-2 action-link" @onclick="@ToggleShowAll"> @(_showAll ? "Show collected" : "Show all") </span>
-        }    
-        </div>  
+        }
     </div>
 </div>
 
@@ -66,23 +64,18 @@
 
     protected override Task OnInitializedAsync()
     {
-        return LoadSetsAsync(forceRefresh: false);
+        return LoadSetsAsync();
     }
 
-    private async Task LoadSetsAsync(bool forceRefresh)
+    private async Task LoadSetsAsync()
     {
         _isLoading = true;
-        _collectedSets = await _mediator.Send(new GetCollectedSets(forceRefresh), _cts.Token);
+        _collectedSets = await _mediator.Send(new GetCollectedSets(), _cts.Token);
 
         _hasCards = _collectedSets.Any(s => s.NumberOfCollectedCards > 0);
         _showAll = !_hasCards;
 
         _isLoading = false;
-    }
-
-    private Task RefreshAsync()
-    {
-        return LoadSetsAsync(forceRefresh: true);
     }
 
     private void ToggleShowAll()
