--- a/Sources/MagicCardTracker.Pwa/Pages/Collection.razor
+++ b/Sources/MagicCardTracker.Pwa/Pages/Collection.razor
@@ -3,10 +3,13 @@
 @page "/collection/{SetCode}"
 @using MagicCardTracker.Contracts
 @using System.Threading
+@using Microsoft.Extensions.Configuration
 @using MagicCardTracker.Pwa.Components
 @using MediatR
+@using Models
 @using Queries
 @inject IMediator _mediator
+@inject IConfiguration _configuration
 @implements IDisposable
 
 <div class="row">
@@ -40,8 +43,6 @@
 
 @code {
 
-    private const int DEFAULT_COLLECTION_DISPLAY_SIZE = 100;
-
     [Parameter]
     public string SetCode { get; set; }
     
@@ -57,6 +58,8 @@
 
     private IEnumerable<CollectedCard> _loadedCards;
 
+    private CollectionSettings _settings = new CollectionSettings();
+
     public void Dispose()
     {
         _cts.Cancel();
@@ -65,6 +68,9 @@
 
     protected override async Task OnInitializedAsync()
     {
+        _configuration.GetSection(CollectionSettings.Key)
+                      .Bind(_settings);
+
         _isLoading = true;
         _collection = await _mediator.Send(new GetCollectedCards(), _cts.Token);
 
@@ -80,7 +86,7 @@
 
     private void ShowMore()
     {
-        _take += DEFAULT_COLLECTION_DISPLAY_SIZE;
+        _take += _settings.DisplayBatchSize;
         _hasMore = _take < _collection.Count();
         _loadedCards = _collection.Take(_take);
     }
